Fix container spacing

--- a/R7.Epsilon/Skins/css/skin.less
+++ b/R7.Epsilon/Skins/css/skin.less
@@ -808,6 +808,7 @@ ul.skin-socialgroups
 
 .cnt-blank,
 .cnt-thumbnail,
+.cnt-thumbnail-h,
 .cnt-message { margin-top:20px; } // like h2 & h3
 
 // fix message containers max width
